# auto_recipe_creator

./: .gitignore  CLAUDE.md  GEMINI.md  RAG_IMPLEMENTATION.md  README.md  User_Requirements_Documents.md  evaluation_cases_example.json  pyproject.toml  requirements-rag.txt
.claude/: settings.local.json
automation/: __init__.py
automation/rcs/: __init__.py  rcs_config.py  rcs_launcher.py  rcs_window_controller.py  run_login.py
docs/: project_planning_ppt.md  project_planning_ppt_executive_summary.md
docs/gui_control/: 00-overview.md  01-modern-libraries.md  02-capabilities-and-limitations.md  03-automation-strategies.md  04-microsoft-vision-tools.md  05-microsoft-automation-ecosystem.md  06-hybrid-automation-patterns.md  07-cpu-based-poc.md
docs/remote-coding-setup/: 00-overview.md  01-mac-mini-setup.md  02-galaxy-tab-setup.md  03-connection-guide.md
poc/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  cpu_automation_demo.py  evaluate_rag.py  rag_automation_demo.py  test_setup.py
poc/home/: README.md  __init__.py  demo.py  hf_vlm.py  test_setup.py
questionair/: ai_education_survey.md
study/mongodb/: 01_basic_crud.py  02_queries.py  03_aggregation.py  04_indexing.py  05_practical_example.py  README.md  requirements.txt
test/: __init__.py
test/video_frame_parser/: __init__.py  action_extractor.py  analyzer.py  batch_processor.py  cctv_processor.py  config.py  db_handler.py  error_detector.py  example_usage.py  extractor.py  models.py  ocr_annotator.py  parser.py  requirements.txt  text_embedder.py  ui_element_detector.py
(+19 files in other folders)
